# LifeGrid

./: .codecov.yml  .dockerignore  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_OVERHAUL.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  PHASE_8_COMPLETION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_FINAL.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_ENHANCEMENTS.md  cellular_automaton_gui.py  cellular_automaton_gui_broken.py  lifegrid.spec  pyproject.toml  requirements.txt  run.sh  setup.py  test_results.md
.github/workflows/: ci-cd.yml  docker-publish.yml  release.yml
docs/: COMPREHENSIVE_USER_GUIDE.md  DEVELOPMENT.md  INDEX.md  Makefile  README.md  USER_GUIDE.md  api_reference.md  architecture.md  cli_reference.md  conf.py  index.rst  installation.md  installation.rst  plugin_development.md  quickstart.rst  user_guide.md
docs/api/: automata.rst  core.rst  features.rst
docs/architecture/: 01_system_architecture.md
docs/guides/: 01_installation.md  02_user_guide.md  03_advanced_features.md  04_file_formats.md  05_faq.md  06_troubleshooting.md  07_performance.md  08_plugin_development.md
docs/reference/: 01_core_api.md
docs/tutorials/: 01_getting_started.md  02_drawing.md  03_custom_rules.md  04_advanced_features.md  05_exporting.md
examples/: EXAMPLES_README.md  README.md  enhanced_statistics_examples.py  pattern_management_examples.py  ui_enhancement_examples.py  video_export_examples.py
examples/scripts/: advanced_features_example.py  basic_simulator.py  custom_plugin.py  export_example.py  pattern_explorer.py  performance_example.py  undo_redo_example.py
lifegrid-rs/: Cargo.toml
lifegrid-rs/src/: app.rs  export.rs  main.rs  patterns.rs
lifegrid-rs/src/automata/: ant.rs  briansbrain.rs  conway.rs  daynight.rs  generations.rs  hexagonal.rs  highlife.rs  immigration.rs  lifelike.rs  maze.rs  mod.rs  rainbow.rs  seeds.rs  wireworld.rs
lifegrid-rs/src/core/: boundary.rs  config.rs  grid.rs  mod.rs  undo.rs
lifegrid-ts/: index.html
lifegrid-ts/src/: main.ts  style.css
output/: blinker.rle  discovered_rules.txt  simulation_stats.csv  simulation_summary.csv
plugins/: day_and_night.py
src/: autosave_manager.py  cli.py  config_manager.py  export_manager.py  main.py  pattern_browser.py  patterns.py  plugin_system.py  ui_enhancements.py  version.py
src/advanced/: __init__.py  cell_tracker.py  enhanced_statistics.py  pattern_analysis.py  pattern_manager.py  rle_format.py  rule_discovery.py  statistics.py  visualization.py
src/api/: __init__.py  app.py  collab.py
src/automata/: __init__.py  ant.py  base.py  (+9 more)
tests/: conftest.py  mypy.ini  test_advanced.py  test_automata.py  test_config.py  test_conway.py  test_core.py  test_fileio.py  test_gui.py  test_highlife.py  test_new_rules.py  test_performance.py  test_phase3.py  test_plugin_full.py  test_selection.py  test_state.py  test_thorough.py  test_tools.py  test_ui_enhancements.py  test_undo.py
(+56 files in other folders)
