[package]
name        = "lifegrid"
version     = "4.1.0"
edition     = "2021"
description = "LifeGrid – cellular automaton simulator (egui/Rust port)"
license     = "MIT"

[[bin]]
name = "lifegrid"
path = "src/main.rs"

[dependencies]
eframe       = { version = "0.31", default-features = true }
egui         = "0.31"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rand         = "0.8"
image        = { version = "0.25", default-features = false, features = ["png", "gif"] }
rfd          = "0.15"
arboard      = "3"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
